# recording-mvp

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/schemas/com.memorystream.data.db.AppDatabase/: 10.json  11.json  4.json  5.json  6.json  7.json  8.json  9.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper-jni.cpp
app/src/main/java/com/memorystream/: MemoryStreamApp.kt
app/src/main/java/com/memorystream/api/: ApiConfig.kt  CloudApi.kt
app/src/main/java/com/memorystream/audio/: AudioCaptureManager.kt  AudioChunkScheduler.kt  AudioPlaybackManager.kt  ChunkRecorder.kt
app/src/main/java/com/memorystream/di/: AppModule.kt
app/src/main/java/com/memorystream/embedding/: OnnxEmbeddingEngine.kt  OpenAIEmbeddingEngine.kt  SemanticSearchEngine.kt
app/src/main/java/com/memorystream/intelligence/: CommitmentDetector.kt
app/src/main/java/com/memorystream/service/: CloudChunkUploader.kt  ExclusionZoneManager.kt  LocationProvider.kt  PlaceResolver.kt  RecordingService.kt  UsbAudioMonitor.kt
app/src/main/java/com/memorystream/transcription/: DeepgramClient.kt  TranscriptionWorker.kt  WhisperEngine.kt
app/src/main/java/com/memorystream/ui/: MainActivity.kt
app/src/main/java/com/memorystream/util/: ModelManager.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: font_certs.xml  strings.xml  themes.xml
cloud/schema/: init.sql
cloud/scripts/: deploy.sh
cloud/service/: config.py  db.py  main.py  requirements.txt
cloud/workflows/: process-chunk.yaml
docs/: MARKETING.md  PRODUCT_DESCRIPTION.md
(+37 files in other folders)
